--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,38 @@ h1 {
 .photographer_section article h2 {
     color: #D3573C;
     font-size: 36px;
+    margin-bottom: 0px;
+    text-align: center; /*code ajouté*/
 }
 
 .photographer_section article img {
     height: 200px;
     width: 200px;
+    border-radius: 100%;
+}
+
+/*ajout code dessous*/
+
+.pays{
+    margin-top: 0px;
+    margin-bottom: 0px;
+    color: #901C1C;
+    font-size: 13px;
+}
+.tagline{
+    margin-top: 5px;
+    margin-bottom: 3px;
+    font-size: 10px;
+}
+.tarif{
+    margin-top: 0px;
+
+    color: #525252;
+font-size: 9px;
+}
+
+.photographer_section p{
+    text-align: center;
+    padding: 0%;
+
 }
