--- a/css/style.css
+++ b/css/style.css
@@ -1,80 +1,78 @@
 @import url("photographer.css");
+@import url("photo.css");
 
 body {
-    font-family: "DM Sans", sans-serif;
-    margin: 0;
+  font-family: "DM Sans", sans-serif;
+  margin: 0;
 }
 
-
 header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height: 90px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 90px;
 }
 
 h1 {
-    color: #901C1C;
-    margin-right: 100px;
+  color: #901c1c;
+  margin-right: 100px;
 }
 
 .logo {
-    height: 50px;
-    margin-left: 100px;
+  height: 50px;
+  margin-left: 100px;
 }
 
 .photographer_section {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 70px;
-    margin-top: 100px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 70px;
+  margin-top: 100px;
 }
 
 .photographer_section article {
-    justify-self: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  justify-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .photographer_section article h2 {
-    color: #D3573C;
-    font-size: 36px;
-    margin-bottom: 0px;
-    text-align: center; /*code ajouté*/
+  color: #d3573c;
+  font-size: 36px;
+  margin-bottom: 0px;
+  text-align: center; /*code ajouté*/
 }
 
 .photographer_section article img {
-    height: 200px;
-    width: 200px;
-    border-radius: 100%;
+  height: 200px;
+  width: 200px;
+  border-radius: 100%;
 }
 
 /*ajout code dessous*/
 
-.pays{
-    margin-top: 0px;
-    margin-bottom: 0px;
-    color: #901C1C;
-    font-size: 13px;
+.pays {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  color: #901c1c;
+  font-size: 13px;
 }
-.tagline{
-    margin-top: 3px;
-    margin-bottom: 3px;
-    font-size: 10px;
+.tagline {
+  margin-top: 3px;
+  margin-bottom: 3px;
+  font-size: 10px;
 }
-.tarif{
-    margin-top: 0px;
+.tarif {
+  margin-top: 0px;
 
-    color: #525252;
-font-size: 9px;
-}
-
-.photographer_section p{
-    text-align: center;
-    padding: 0%;
-
+  color: #525252;
+  font-size: 9px;
 }
 
+.photographer_section p {
+  text-align: center;
+  padding: 0%;
+}
